--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         p{
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
         }
+        dt{
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -35,16 +38,22 @@
     </p>
     <hr>
     <div class="contents">
-        <p>영화소개</p>
-        <p>영화를 소개하는 부분입니다.</p>
+        <dl>
+            <dt>영화소개</dt>
+            <dt>영화를 소개하는 부분입니다.</dt>
+        </dl>
     </div>
     <div id="ootd">
-        <p>오늘의 패션</p>
-        <p>오늘의 패션/코디를 소개하는 부분입니다.</p>
+        <dl>
+            <dt>오늘의 패션</dt>
+            <dt>오늘의 패션/코디를 소개하는 부분입니다.</dt>
+        </dl>
     </div>
     <div class="contents">
-        <p>넷플릭스 소개</p>
-        <p>넷플릭스 시리즈를 소개하는 부분입니다.</p>
+        <dl>
+            <dt>넷플릭스 소개</dt>
+            <dt>넷플릭스 시리즈를 소개하는 부분입니다.</dt>
+        </dl>
     </div>
 </body>
 </html>
