--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="contents">
         <dl>
             <dt>파묘</dt>
-            <dd>미국 LA, 거액의 의뢰를 받은 무당 ‘화림’(김고은)과 ‘봉길’(이도현)은
+            <dd><img src="https://i.namu.wiki/i/FfbVfXabRpL2poLTigKvNgkY3WOrWVib4__VbKdN_j0SWBanSfzWbGl_Z2MCUkMBWlzjr2GG_SdSqRh6wmEOoo6vMJVbbDk2JOiQPQpj2F6R2Q0DO30nUaO4ey2zej00o8VLpFRMRP75colAQk8Aig.webp" alt="사진" width="250">미국 LA, 거액의 의뢰를 받은 무당 ‘화림’(김고은)과 ‘봉길’(이도현)은
                 기이한 병이 대물림되는 집안의 장손을 만난다.
                 조상의 묫자리가 화근임을 알아챈 ‘화림’은 이장을 권하고,
                 돈 냄새를 맡은 최고의 풍수사 ‘상덕’(최민식)과 장의사 ‘영근’(유해진)이 합류한다.
@@ -61,7 +61,8 @@
     <div class="contents">
         <dl>
             <dt>댓글부대</dt>
-            <dd>실력 있지만 허세 가득한 사회부 기자 ‘임상진’
+            <dd>
+                <img src="https://i.namu.wiki/i/eOc4id15C0S-Sxa2Eo6Q5TArbGxdFtVDfSWajQoTHO8gui5NKVsyg1WS33fGYVXLt9Vs_v_u6wL7TVbiX7B_tiFjCUGOdHASSETvejZ2ergLhA-3VFQlV26oNZ-200FCGvvEDBFgNw764OYeNK5bqw.webp" alt="사진" width="250">실력 있지만 허세 가득한 사회부 기자 ‘임상진’
                 대기업 ‘만전’의 비리를 취재하지만 오보로 판명되며 정직당한다.
                 그러던 어느 날, 온라인 여론을 조작했다는 의문의 제보자가 찾아오는데…
                 
