--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="contents">
         <dl>
             <dt>파묘</dt>
-            <dd><a href="https://namu.wiki/w/%ED%8C%8C%EB%AC%98"><img src="https://i.namu.wiki/i/FfbVfXabRpL2poLTigKvNgkY3WOrWVib4__VbKdN_j0SWBanSfzWbGl_Z2MCUkMBWlzjr2GG_SdSqRh6wmEOoo6vMJVbbDk2JOiQPQpj2F6R2Q0DO30nUaO4ey2zej00o8VLpFRMRP75colAQk8Aig.webp" alt="사진"></a>미국 LA, 거액의 의뢰를 받은 무당 ‘화림’(김고은)과 ‘봉길’(이도현)은
+            <dd><a target="_blank" href="https://namu.wiki/w/%ED%8C%8C%EB%AC%98"><img src="https://i.namu.wiki/i/FfbVfXabRpL2poLTigKvNgkY3WOrWVib4__VbKdN_j0SWBanSfzWbGl_Z2MCUkMBWlzjr2GG_SdSqRh6wmEOoo6vMJVbbDk2JOiQPQpj2F6R2Q0DO30nUaO4ey2zej00o8VLpFRMRP75colAQk8Aig.webp" alt="사진"></a>미국 LA, 거액의 의뢰를 받은 무당 ‘화림’(김고은)과 ‘봉길’(이도현)은
                 기이한 병이 대물림되는 집안의 장손을 만난다.
                 조상의 묫자리가 화근임을 알아챈 ‘화림’은 이장을 권하고,
                 돈 냄새를 맡은 최고의 풍수사 ‘상덕’(최민식)과 장의사 ‘영근’(유해진)이 합류한다.
@@ -63,7 +63,7 @@
                 나와서는 안될 것이 나왔다.</dd>
         </dl>
     </div>
-    <a href="https://namu.wiki/w/%EB%8C%93%EA%B8%80%EB%B6%80%EB%8C%80(%EC%98%81%ED%99%94)"><div class="contents">
+    <a target="_blank" href="https://namu.wiki/w/%EB%8C%93%EA%B8%80%EB%B6%80%EB%8C%80(%EC%98%81%ED%99%94)"><div class="contents">
         <dl>
             <dt>댓글부대</dt>
             <dd>
