--- a/index.html
+++ b/index.html
@@ -4,39 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>웹 스터디 :: 김영현</title>
-    <style>
-        img{
-            width: 250px;
-        }
-        div{
-            display: inline-block;
-            border-top: solid 4px gray;
-            border-left: solid 4px gray;
-            border-right: solid 4px black;
-            border-bottom: solid 4px black;
-            margin: 5px;
-            padding: 10px 30px 10px 30px;
-            width: 300px;
-        }
-        div.contents{
-            background-color: gold;
-            vertical-align: top;
-        }
-        div#ootd{
-            background-color: cyan;
-            vertical-align: top;
-        }
-        p{
-            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        }
-        dl{
-            font-weight: bold;
-        }
-        dt#ootddt{
-            color: red;
-            text-decoration-line: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <h1>웹 화면 구현 수업의 웹스터디 페이지</h1>
