--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     </div>
     <div id="iogin_form">
         <form action="#" method="get">
-            아이디 입력 : <input type="text">
+            <label for="">asd</label>
+            아이디 입력 : <input type="text" placeholder="asd">
             패스워드 입력 :<input type="password" name="" id="">
             전화번호 : <input type="tel" name="" id="">
             숫자 : <input type="number" name="" id="">
@@ -78,6 +79,7 @@
             시 : <input type="time" name="" id="">
             범위 : <input type="range" name="" id="">
             색상 선택 : <input type="color" name="" id="">
+            <textarea name="" id="" cols="30" rows="10" placeholder="호호호"></textarea>
             <input type="submit" value="로그인하기">
             <input type="reset" value="양식 초기화">
         </form>
