--- a/index.html
+++ b/index.html
@@ -82,7 +82,118 @@
             <textarea name="" id="" cols="30" rows="10" placeholder="호호호"></textarea>
             <input type="submit" value="로그인하기">
             <input type="reset" value="양식 초기화">
+            <table style="border: 1px solid gray; text-align: center;">
+                <tr>
+                    <th>
+                        번호
+                    </th>
+                    <th>
+                        상품명
+                    </th>
+                    <th>
+                        수량
+                    </th>
+                    <th>
+                        가격
+                    </th>
+                </tr>
+                <tr>
+                    <td>
+                        1
+                    </td>
+                    <td>
+                        콜라
+                    </td>
+                    <td>
+                        1개
+                    </td>
+                    <td>
+                        1,500원
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        2
+                    </td>
+                    <td>
+                        사이다
+                    </td>
+                    <td>
+                        1개
+                    </td>
+                    <td rowspan="2">
+                        1,000원
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        3
+                    </td>
+                    <td>
+                        탄산수
+                    </td>
+                    <td>
+                        3개
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        합계
+                    </td>
+                    <td colspan="3">
+                        6,500원
+                    </td>
+                </tr>
+            </table>
         </form>
+        table>tr>th*4^tr*3>td*4
+
+        table>tr>th*4{번호}^tr*3>td*4{1}
+    </div>
+    <div id="iogin_form">
+        <table width="500px" border="2" cellspacing="3">
+            <caption style="color: #ff0000; font-weight: bold;">제품 주문표</caption>
+            <col style="width: 10%">
+            <colgroup span="3" style="width: 20%; background-color: beige;"></colgroup>
+            <col style="width: 30%">
+            <thead>
+                <tr>
+                    <th scope="col">순번</th>
+                    <th scope="col">품명</th>
+                    <th scope="col">단가</th>
+                    <th scope="col">수량</th>
+                    <th scope="col">비고</th>
+                </tr>
+                </thead>
+                <tfoot>
+                    <tr>
+                        <th scope="row">합계</td>
+                        <td colspan="4"></td>
+                    </tr>
+                    </tfoot>
+                <tbody>
+                <tr>
+                    <th scope="row">1</td>
+                    <td>새우깡</td>
+                    <td>1,200</td>
+                    <td>3</td>
+                    <td rowspan="3">해당없음</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</td>
+                    <td>감자깡</td>
+                    <td>1,300</td>
+                    <td>8</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</td>
+                    <td>자갈치</td>
+                    <td>1,400</td>
+                    <td>20</td>
+                </tr>
+                </tbody>
+        </table>
+        <video src="./src/cat.mp4" controls></video>
     </div>
 </body>
 </html>
